# rebar

./: Cargo.toml  example.rbr
lib/std/: intrinsics.rbr  lib.rbr  sys.rbr
rb-backend/: Cargo.toml
rb-backend/src/: lib.rs  r_value.rs  slot.rs
rb-build/: Cargo.toml  rebar.ungram
rb-build/src/: ast_src.rs  sourcegen.rs  sourcegen_ast.rs
rb-codegen/: Cargo.toml
rb-codegen-opt/: Cargo.toml
rb-codegen-opt-macros/: Cargo.toml
rb-codegen-opt-macros/src/: lib.rs
rb-codegen-opt/src/: lib.rs
rb-codegen-opt/src/analysis/: control_flow_graph.rs  dominator_tree.rs  mod.rs  value_uses.rs
rb-codegen-opt/src/tests/: diff.rs  mod.rs  parse_ir.rs
rb-codegen-opt/src/transform/: constant_fold.rs  eliminate_empty_blocks.rs  eliminate_unreachable_blocks.rs  eliminate_unused_vars.rs  helper.rs  merge_blocks.rs  mod.rs  update_phis.rs
rb-codegen-x86/: Cargo.toml
rb-codegen-x86/src/: elf.rs  instruction.rs  lib.rs  regalloc.rs  register.rs
rb-codegen/src/: instr.rs  lib.rs  tvec.rs
rb-diagnostic/: Cargo.toml
rb-diagnostic/src/: context.rs  diagnostic.rs  lib.rs  sources.rs
rb-gc/: Cargo.toml
rb-gc/src/: allocator_api.rs  arena.rs  barrier.rs  collect.rs  collect_impl.rs  context.rs  dynamic_roots.rs  gc.rs  gc_weak.rs  hashbrown.rs  lib.rs  lock.rs  metrics.rs  no_drop.rs  static_collect.rs  types.rs  unsize.rs
rb-hir/: Cargo.toml
rb-hir-lower/: Cargo.toml
rb-hir-lower/src/: collect.rs  fs.rs  lib.rs  resolve.rs
rb-hir/src/: ast.rs  lib.rs  literal.rs  lower.rs
rb-jit/: Cargo.toml
rb-jit/src/: array.rs  ir_value.rs  jit.rs  lib.rs  r_value.rs  slot.rs  value.rs
rb-jit/src/jit/: array.rs  ir_value.rs  mod.rs  r_value.rs
rb-mir/: Cargo.toml
rb-mir-lower/: Cargo.toml
rb-mir-lower/src/: lib.rs
rb-mir/src/: ast.rs  lib.rs  lower.rs
rb-parser/: Cargo.toml  build.rs
rb-parser/src/: lib.rs  token.rs
rb-parser/src/grammar/: entry_point.rs  expr.rs  mod.rs  stmt.rs  types.rs
rb-parser/src/tests/: inline.rs  mod.rs
rb-runtime/: Cargo.toml
rb-runtime/src/: gc.rs  gc_value.rs  interp.rs  intrinsics.rs  jit.rs  lib.rs  owned_arg_parser.rs
rb-runtime/src/gc/: mod.rs  value.rs
rb-runtime/src/stdlib/: arg_parser.rs  mod.rs  slice.rs
rb-runtime/src/stdlib/core/: mod.rs
rb-runtime/src/stdlib/std/: mod.rs
rb-std/: Cargo.toml
rb-std/src/: arg_parser.rs  array.rs  environment.rs  lib.rs  slice.rs  strct.rs  value.rs
rb-std/src/core/: mod.rs
rb-syntax/: Cargo.toml  build.rs
rb-syntax/src/: ext.rs  lib.rs  node.rs  parse.rs  support.rs
rb-test/: Cargo.toml
rb-test/src/: file.rs  lib.rs
rb-typer/: Cargo.toml
rb-typer/src/: constrain.rs  lib.rs  ty.rs
rb-value/: Cargo.toml
rb-value/src/: arg.rs  array.rs  ir.rs  lib.rs
refmt/: Cargo.toml
refmt/src/: fmt.rs  main.rs  tests.rs
relsp/: Cargo.toml
relsp/relsp/: Cargo.toml
relsp/relsp/src/: files.rs  global.rs  info.rs
relsp/relsp/src/handler/: notification.rs  request.rs
relsp/rl-analysis/: Cargo.toml
relsp/rl-analysis/src/: file.rs  highlight.rs  lib.rs
relsp/src/: files.rs  global.rs  info.rs  main.rs
relsp/src/analysis/: highlight.rs
relsp/src/handler/: notification.rs  request.rs
test/: Cargo.toml
test/integration/behavior/: addr.rbr  array.rbr  basic.rbr  block.rbr  boolean.rbr  call.rbr  conditional.rbr  malloc.rbr  math.rbr  string.rbr  struct.rbr  struct_return.rbr  union.rbr  variables.rbr
test/src/: main.rs
