[workspace]
resolver = "2"
members = [
  "rb-build",
  "rb-test",
  "rb-parser",
  "rb-syntax",
  "rb-diagnostic",
  "rb-hir",
  "rb-hir-lower",
  "rb-typer",
  "rb-mir",
  "rb-mir-lower",
  "rb-value",
  "rb-gc",
  "rb-codegen",
  "rb-codegen-x86",
  "rb-backend",
  "rb-std",
  "rb-runtime",

  "test",
  "refmt",

  "relsp/rl-analysis",
  "relsp/relsp",
]

[workspace.dependencies]
rb-test = { path = "rb-test" }
rb-build = { path = "rb-build" }
rb-parser = { path = "rb-parser" }
rb-syntax = { path = "rb-syntax" }
rb-diagnostic = { path = "rb-diagnostic" }
rb-hir = { path = "rb-hir" }
rb-hir-lower = { path = "rb-hir-lower" }
rb-typer = { path = "rb-typer" }
rb-mir = { path = "rb-mir" }
rb-mir-lower = { path = "rb-mir-lower" }
rb-value = { path = "rb-value" }
rb-gc = { path = "rb-gc" }
rb-codegen = { path = "rb-codegen" }
rb-codegen-x86 = { path = "rb-codegen-x86" }
rb-backend = { path = "rb-backend" }
rb-std = { path = "rb-std" }
rb-runtime = { path = "rb-runtime" }
