[package]
name = "rb-codegen-opt"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rb-codegen.workspace = true
rb-codegen-opt-macros.workspace = true

smallvec = "1.15.1"

[dev-dependencies]
rb-test.workspace = true
