[package]
name = "rb-codegen-x86"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rb-codegen.workspace = true

indexmap = "2.11.4"
object = { version = "0.37.3", default-features = false, features = ["elf", "std", "write_core"] }
smallvec = "1.15.1"
bitflags = "2.9.4"

[dev-dependencies]
rb-test.workspace = true
