[package]
name = "rb-mir-lower"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rb-diagnostic.workspace = true
rb-hir.workspace = true
rb-typer.workspace = true
rb-mir.workspace = true

[dev-dependencies]
rb-hir-lower = { workspace = true, features = ["test"] }
rb-diagnostic = { workspace = true, features = ["test"] }
rb-test.workspace = true
