[package]
name = "rb-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
rb-diagnostic.workspace = true
rb-syntax.workspace = true
rb-hir-lower.workspace = true
rb-hir.workspace = true
rb-typer.workspace = true
rb-mir-lower.workspace = true
rb-mir.workspace = true
rb-value.workspace = true
rb-gc.workspace = true
rb-backend.workspace = true
rb-std.workspace = true
