[package]
name = "rb-typer"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
rb-diagnostic.workspace = true
rb-hir.workspace = true

la-arena = "0.3.1"

[dev-dependencies]
rb-hir-lower = { workspace = true, features = ["test"] }
rb-diagnostic = { workspace = true, features = ["test"] }
rb-test.workspace = true
