[package]
name = "relsp"
version = "0.1.0"
edition = "2021"

[dependencies]
rb-syntax.workspace = true
rb-hir.workspace = true
rb-hir-lower.workspace = true
rb-typer.workspace = true
rb-diagnostic.workspace = true

lsp-server = "0.7.6"
serde_json = "1.0.117"
lsp-types = "0.95.0"
log = "0.4.21"
crossbeam-channel = "0.5.13"
line-index = "0.1.1"
la-arena = "0.3.1"
parking_lot = "0.12.3"
simple-logging = "2.0.2"
