[package]
name = "relsp"
version = "0.1.0"
edition = "2024"

[dependencies]
rl-analysis.path = "../rl-analysis"

rb-syntax.workspace = true
rb-hir.workspace = true
rb-hir-lower.workspace = true
rb-typer.workspace = true
rb-diagnostic.workspace = true

lsp-server = "0.7.9"
serde_json = "1.0.145"
lsp-types = "0.95.1"
log = "0.4.28"
crossbeam-channel = "0.5.15"
line-index = "0.1.2"
la-arena = "0.3.1"
parking_lot = "0.12.5"
simple-logging = "2.0.2"
