[package]
name = "rl-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
rb-syntax.workspace = true
rb-hir.workspace = true
rb-hir-lower.workspace = true
rb-typer.workspace = true
rb-diagnostic.workspace = true

serde_json = "1.0.117"
log = "0.4.21"
crossbeam-channel = "0.5.13"
line-index = "0.1.1"
la-arena = "0.3.1"
parking_lot = "0.12.3"
salsa = "0.17.0-pre.2"
